# redactable

./: CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  gdpr.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/: FUNDING.yaml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yaml  feature-request.yml
.github/workflows/: ci.yaml  ci.yml  pre-commit.yml  publish.yml  release-drafter.yml  release.yml
docs/: api_reference.md  contributing.md  faq.md  governance.md  index.md  installation.md  policies.md  quickstart.md  roadmap.md  usage.md
policies/: gdpr.yaml  pci.yaml
src/cli/: __main__.py
src/examples/policies/: gdpr.yaml
src/redactable/: __init__.py  audit.py  cli.py  decors.py  engine.py  hide.py
src/redactable/detectors/: __init__.py  base.py  credit_card.py  email.py  entropy.py  iban.py  nhs.py  phone.py  regexes.py  registry.py  run.py  schema_hints.py  ssn.py  utils.py
src/redactable/in_out/: __init__.py  base.py  readers.py  writers.py
src/redactable/policy/: __init__.py  builder.py  defaults.py  engine.py  loader.py  model.py
src/redactable/transforms/: mask.py  redact.py
tests/: _quicktest.py  gdpr.yaml  test_apply.py  test_decors.py  test_detectors.py  test_policy_builder.py  test_policy_defaults.py  test_policy_loader.py  test_policy_where.py  test_registry.py  test_writers.py
