[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "redactable"
description = "One-line value prop."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Sober & Co.", email = "redactable@open.soberandco.dev" }]
keywords = ["privacy"]
classifiers = ["Programming Language :: Python :: 3"]

dependencies = [
    "pip~=25.2",
    "pyyaml~=6.0.2",
    "pydantic~=2.11.7"
]

dynamic = ["version"]

[project.scripts]
redactable = "redactable.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/redactable"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","SIM"]
